about section made

--- a/about.html
+++ b/about.html
@@ -9,9 +9,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
-    <div class="wrapper">
+    <div class="wrapper about">
         <header class="header header-main">
             <div class="container">
                 <div class="header__inner">
@@ -47,146 +48,141 @@
             </div>
         </header>
         
-        <main class="main blog">
-            <section class="choose">
-                <div class="container">
-                    <h2 class="section-title">
-                        About
-                    </h2>
-                </div>
-            </section>
+        <main class="main">
+            <div class="about_content">
+                <section class="Mission">
+                    <div class="_cover mission_title">
+                        <h2 class="about-title_item">
+                            Mission Statement
+                        </h2>
+                    </div>
+                    <div class="_cover mission_text">
+                        <p class="mission_text_item">
+                            Red Letter AI is one of the few companies at the cutting edge of 
+                            generative political copy-writing - and currently the only one that 
+                            caters exclusively to conservative organizations and campaigns.
+                            <br>
+                            <br>
+                            While larger-scale initiatives have the spare resources to keep 
+                            dedicated copy-writers on retainer to write political material, 
+                            across the West there are thousands of conservative candidates 
+                            running for local or municipal offices that have to triage resources 
+                            and labor, and are forced to busy staffers with tedious copy-writing 
+                            work instead of canvassing or engaging with voters where it really 
+                            matters.
+                            <br>
+                            <br>
+                            Every campaign relies on fundraising and other types of copy-writing 
+                            to perform outreach and raise capital, unfortunately, the traditional 
+                            methods of political copy-writing are both time and labor-intensive - 
+                            often taking hours to move through the drafting, feedback, revision, 
+                            and approval stages. To make matters worse, the often quite targeted 
+                            and hyper-specific content makes such copy-writing inflexible and 
+                            difficult to repurpose.
+                            <br>
+                            <br>
+                            That's where Red Letter AI comes in - our goal is to provide 
+                            conservative organizations with the ability to produce high quality, 
+                            personalized, and tailored copy-writing material at the press of a
+                            button, eliminating the bottlenecks associated with traditional 
+                            copy-writing. 
+                            <br>
+                            <br>
+                            Simply by spending a short amount of time filling out your campaign's 
+                            profile and background on our platform, Red Letter AI's LLM-powered 
+                            product is able to call on this information and more to generate 
+                            compelling copy-writing material that is able to take into account 
+                            the nuances of your mission and intelligently communicate this to any 
+                            audience, streamlining your outreach strategies.
+                            <br>
+                            <br>
+                            <b><i><center>
+                                Conservatives have always had to do more with less - make sure 
+                                you do it the smart way.
+                            </center></i></b>
+                        </p>
+                    </div>
+                </section>
+                <section class="team">
+                    <div class="_cover team_title">
+                        <h2 class="about-title_item">
+                            The Team
+                        </h2> 
+                    </div>
+                    <div class="_cover member">
+                        <img class="member_icon" src="../images/m1.jpg" alt="">
+                        <div class="member_info_txt">
+                            <h4 class="member_name">
+                                Justin Cleary - CEO & Founder
+                            </h4>
+                            <p class="member_info">
+                                University of Colorado alumnus, founder, and active member of 
+                                organizations such as the New York Young Republicans, Justin 
+                                Cleary has been dedicated to carving out a conservative presence 
+                                in the tech and social media industries.
+                            </p>
+                            <div class="member_link">
+                                <a class="member_link_item" href="https://www.linkedin.com/in/justincleary/">
+                                    <i class='member_link_icn bx bxl-linkedin-square'></i>
+                                </a>
+                            </div>
+                        </div> 
+                    </div>
+                    <div class="_cover member">
+                        <img class="member_icon" src="../images/m2.jpg" alt="">
+                        <div class="member_info_txt">
+                            <h4 class="member_name">
+                                Conor Pilant - Co-Founder
+                            </h4>
+                            <p class="member_info">
+                                University of Maryland alumnus and former chief of operations 
+                                for Red Voices. Having studied history and political science 
+                                at university, Conor Pliant is motivated to put this knowledge 
+                                to practical use.
+                            </p>
+                            <div class="member_link">
+                                <a class="member_link_item" href="https://www.linkedin.com/in/conor-p-32845921b/">
+                                    <i class='member_link_icn bx bxl-linkedin-square'></i>
+                                </a>
+                            </div>
+                        </div> 
+                    </div>
+                </section>
+            </div>
         </main>
 
         <footer class="footer">
             <div class="container">
-                <nav class="footer_menu">
-                    <ul class="footer_menu-list">
-                        <li class="footer_menu-item">
-                            <p class="footer_menu-title">
-                                Products
-                            </p>
-                        </li>
-                        <li class="footer_menu-item">
-                            <a class="footer_menu-link" href="#">
-                                Used
-                            </a>
-                        </li>
-                        <li class="footer_menu-item">
-                            <a class="footer_menu-link" href="#">
-                                New
-                            </a>
-                        </li>
-                        <li class="footer_menu-item">
-                            <a class="footer_menu-link" href="#">
-                                Sell your car
-                            </a>
-                        </li>
-                    </ul>
-                    <ul class="footer_menu-list">
-                        <li class="footer_menu-item">
-                            <p class="footer_menu-title">
-                                Resources
-                            </p>
-                        </li>
-                        <li class="footer_menu-item">
-                            <a class="footer_menu-link" href="#">
-                                Blog
-                            </a>
-                        </li>
-                        <li class="footer_menu-item">
-                            <a class="footer_menu-link" href="#">
-                                FAQ
-                            </a>
-                        </li>
-                        <li class="footer_menu-item">
-                            <a class="footer_menu-link" href="#">
-                                Contact us
-                            </a>
-                        </li>
-                    </ul>
-                    <ul class="footer_menu-list">
-                        <li class="footer_menu-item">
-                            <p class="footer_menu-title">
-                                Work With TrueCar
-                            </p>
-                        </li>
-                        <li class="footer_menu-item">
-                            <a class="footer_menu-link" href="#">
-                                Dealers
-                            </a>
-                        </li>
-                        <li class="footer_menu-item">
-                            <a class="footer_menu-link" href="#">
-                                Partners
-                            </a>
-                        </li>
-                    </ul>
-                    <ul class="footer_menu-list">
-                        <li class="footer_menu-item">
-                            <p class="footer_menu-title">
-                                About
-                            </p>
-                        </li>
-                        <li class="footer_menu-item">
-                            <a class="footer_menu-link" href="#">
-                                About us
-                            </a>
-                        </li>
-                        <li class="footer_menu-item">
-                            <a class="footer_menu-link" href="#">
-                                Team
-                            </a>
-                        </li>
-                        <li class="footer_menu-item">
-                            <a class="footer_menu-link" href="#">
-                                Careers
-                            </a>
-                        </li>
-                    </ul>
-                </nav>
-
-                <ul class="app">
-                    <li class="app__item">
-                        <a class="app__item-link" href="#">
-                            <img class="app__item-img" src="images/appstore.svg" alt="">
+                <div class="footer__inner">
+                    <div class="footer__part__one">
+                        <a class="logo" href="index.html">
+                            <img class="logo__inner" src="images/logo.svg" alt="">
                         </a>
-                    </li>
-                    <li class="app__item">
-                        <a class="app__item-link" href="#">
-                            <img class="app__item-img" src="images/gp.svg" alt="">
-                        </a>
-                    </li>
-                </ul>
-                <div class="footer__copy">
-                    <p class="footer__copy-text">
-                        For questions about the TrueCar Auto Buying Service please call 1-888-878-3227. 
-                    </p>
-                    <p class="footer__copy-text">
-                        Certified Dealers are contractually obligated by TrueCar to meet certain customer service requirements and complete the TrueCar Dealer Certification Program.
-                    </p>
-                    <p class="footer__copy-text">
-                        TrueCar does not broker, sell, or lease motor vehicles. Unless otherwise noted, all vehicles shown on this website are offered for sale by licensed motor vehicle dealers. All vehicles are subject to prior sale. By accessing this website, you agree to the TrueCar Terms of Service and Privacy Policy.
-                    </p>
+                    </div>
+                    
+                    <div class="footer__part__two">
+                        <nav class="menu">
+                            <ul class="menu__list">
+                                <li class="menu__list-item">
+                                    <a class="menu__list-link" href="blog.html">Blog</a>
+                                </li>
+                                <li class="menu__list-item">
+                                    <a class="menu__list-link" href="about.html">About</a>
+                                </li>
+                                <li class="menu__list-item">
+                                    <a class="menu__list-link" href="pricing.html">Pricing</a>
+                                </li>
+                                <li class="menu__list-item">
+                                    <a class="menu__list-link" href="contacts.html">CONTACT US</a>
+                                </li>
+                            </ul>
+                        </nav>
+                    </div>
+                    <div class="footer__part__three">
+                        <small>Copyright © 2024 All rights reserved. </small>
+                        <a class="pri_link" href="#">Privacy Policy</a>
+                    </div>
                 </div>
-                <nav class="copy__nav">
-                    <ul class="copy__nav-list">
-                        <li class="copy__nav-item">
-                            <a class="copy__nav-link" href="#">
-                                Terms of Service
-                            </a>
-                        </li>
-                        <li class="copy__nav-item">
-                            <a class="copy__nav-link" href="#">
-                                Privacy Policy
-                            </a>
-                        </li>
-                        <li class="copy__nav-item">
-                            <a class="copy__nav-link" href="#">
-                                Do Not Sell My Personal Information
-                            </a>
-                        </li>
-                    </ul>
-                </nav>
             </div>
         </footer>
     </div>
