--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <div class="main_text">
                 <section class="features">
                     <div class="Block_of_feature">
-                        <i class='bx bx-sync'></i>
+                        <i class='feature_bx bx bx-sync'></i>
                         <h3 class="feature_title">
                             Unlimited Access
                         </h3>
@@ -89,7 +89,7 @@
                         </p>
                     </div>
                     <div class="Block_of_feature">
-                        <i class='bx bxs-wrench' ></i>
+                        <i class='feature_bx bx bxs-wrench' ></i>
                         <h3 class="feature_title">
                             Options for Everyone
                         </h3>
@@ -100,7 +100,7 @@
                         </p>
                     </div>
                     <div class="Block_of_feature">
-                        <i class='bx bxs-user'></i>
+                        <i class='feature_bx bx bxs-user'></i>
                         <h3 class="feature_title">
                             Personalized Personas
                         </h3>
