--- a/blog.html
+++ b/blog.html
@@ -59,134 +59,36 @@
 
         <footer class="footer">
             <div class="container">
-                <nav class="footer_menu">
-                    <ul class="footer_menu-list">
-                        <li class="footer_menu-item">
-                            <p class="footer_menu-title">
-                                Products
-                            </p>
-                        </li>
-                        <li class="footer_menu-item">
-                            <a class="footer_menu-link" href="#">
-                                Used
-                            </a>
-                        </li>
-                        <li class="footer_menu-item">
-                            <a class="footer_menu-link" href="#">
-                                New
-                            </a>
-                        </li>
-                        <li class="footer_menu-item">
-                            <a class="footer_menu-link" href="#">
-                                Sell your car
-                            </a>
-                        </li>
-                    </ul>
-                    <ul class="footer_menu-list">
-                        <li class="footer_menu-item">
-                            <p class="footer_menu-title">
-                                Resources
-                            </p>
-                        </li>
-                        <li class="footer_menu-item">
-                            <a class="footer_menu-link" href="#">
-                                Blog
-                            </a>
-                        </li>
-                        <li class="footer_menu-item">
-                            <a class="footer_menu-link" href="#">
-                                FAQ
-                            </a>
-                        </li>
-                        <li class="footer_menu-item">
-                            <a class="footer_menu-link" href="#">
-                                Contact us
-                            </a>
-                        </li>
-                    </ul>
-                    <ul class="footer_menu-list">
-                        <li class="footer_menu-item">
-                            <p class="footer_menu-title">
-                                Work With TrueCar
-                            </p>
-                        </li>
-                        <li class="footer_menu-item">
-                            <a class="footer_menu-link" href="#">
-                                Dealers
-                            </a>
-                        </li>
-                        <li class="footer_menu-item">
-                            <a class="footer_menu-link" href="#">
-                                Partners
-                            </a>
-                        </li>
-                    </ul>
-                    <ul class="footer_menu-list">
-                        <li class="footer_menu-item">
-                            <p class="footer_menu-title">
-                                About
-                            </p>
-                        </li>
-                        <li class="footer_menu-item">
-                            <a class="footer_menu-link" href="#">
-                                About us
-                            </a>
-                        </li>
-                        <li class="footer_menu-item">
-                            <a class="footer_menu-link" href="#">
-                                Team
-                            </a>
-                        </li>
-                        <li class="footer_menu-item">
-                            <a class="footer_menu-link" href="#">
-                                Careers
-                            </a>
-                        </li>
-                    </ul>
-                </nav>
-
-                <ul class="app">
-                    <li class="app__item">
-                        <a class="app__item-link" href="#">
-                            <img class="app__item-img" src="images/appstore.svg" alt="">
+                <div class="footer__inner">
+                    <div class="footer__part__one">
+                        <a class="logo" href="index.html">
+                            <img class="logo__inner" src="images/logo.svg" alt="">
                         </a>
-                    </li>
-                    <li class="app__item">
-                        <a class="app__item-link" href="#">
-                            <img class="app__item-img" src="images/gp.svg" alt="">
-                        </a>
-                    </li>
-                </ul>
-                <div class="footer__copy">
-                    <p class="footer__copy-text">
-                        For questions about the TrueCar Auto Buying Service please call 1-888-878-3227. 
-                    </p>
-                    <p class="footer__copy-text">
-                        Certified Dealers are contractually obligated by TrueCar to meet certain customer service requirements and complete the TrueCar Dealer Certification Program.
-                    </p>
-                    <p class="footer__copy-text">
-                        TrueCar does not broker, sell, or lease motor vehicles. Unless otherwise noted, all vehicles shown on this website are offered for sale by licensed motor vehicle dealers. All vehicles are subject to prior sale. By accessing this website, you agree to the TrueCar Terms of Service and Privacy Policy.
-                    </p>
+                    </div>
+                    
+                    <div class="footer__part__two">
+                        <nav class="menu">
+                            <ul class="menu__list">
+                                <li class="menu__list-item">
+                                    <a class="menu__list-link" href="blog.html">Blog</a>
+                                </li>
+                                <li class="menu__list-item">
+                                    <a class="menu__list-link" href="about.html">About</a>
+                                </li>
+                                <li class="menu__list-item">
+                                    <a class="menu__list-link" href="pricing.html">Pricing</a>
+                                </li>
+                                <li class="menu__list-item">
+                                    <a class="menu__list-link" href="contacts.html">CONTACT US</a>
+                                </li>
+                            </ul>
+                        </nav>
+                    </div>
+                    <div class="footer__part__three">
+                        <small>Copyright © 2024 All rights reserved. </small>
+                        <a class="pri_link" href="#">Privacy Policy</a>
+                    </div>
                 </div>
-                <nav class="copy__nav">
-                    <ul class="copy__nav-list">
-                        <li class="copy__nav-item">
-                            <a class="copy__nav-link" href="#">
-                                Terms of Service
-                            </a>
-                        </li>
-                        <li class="copy__nav-item">
-                            <a class="copy__nav-link" href="#">
-                                Privacy Policy
-                            </a>
-                        </li>
-                        <li class="copy__nav-item">
-                            <a class="copy__nav-link" href="#">
-                                Do Not Sell My Personal Information
-                            </a>
-                        </li>
-                    </ul>
-                </nav>
             </div>
         </footer>
     </div>
