--- a/about.html
+++ b/about.html
@@ -110,7 +110,7 @@
                         </h2> 
                     </div>
                     <div class="_cover member">
-                        <img class="member_icon" src="../images/inv_1.jpg" alt="">
+                        <img class="member_icon" src="images/m1.jpg" alt="">
                         <div class="member_info_txt">
                             <h4 class="member_name">
                                 Justin Cleary - CEO & Founder
@@ -129,7 +129,7 @@
                         </div> 
                     </div>
                     <div class="_cover member">
-                        <img class="member_icon" src="../images/m2.jpg" alt="">
+                        <img class="member_icon" src="images/m2.jpg" alt="">
                         <div class="member_info_txt">
                             <h4 class="member_name">
                                 Conor Pilant - Co-Founder
