--- a/contacts.html
+++ b/contacts.html
@@ -59,22 +59,26 @@
                         <div class="swiper-slide" style="background-image: url(images/slide_4.jpg);"></div>
                     </div>
                 </div>
-                <section class="contacts">
-                    <div class="container">
-                        <h2 class="section-title contacts__title">
-                            Contact Us
-                        </h2>
-                        <p class="contacts__text">
-                            Feel free to contact us with questions, potencial partnerships or media inquiries
-                        </p>
-                        <form class="form" action="#">
-                            <input class="form__input" type="text" placeholder="First Name">
-                            <input class="form__input" type="text" placeholder="Last Name">
-                            <input class="form__input form__input_email" type="email" placeholder="E-mail">
-                            <textarea class="form__textarea" placeholder="Your text"></textarea>
-                            <button class="form__btn" type="submit">Send Message</button>
-                        </form>
-                    </div>   
+                <div class="cont_holder">
+                    <section class="contacts">
+                        <div class="container">
+                            <h2 class="section-title contacts__title">
+                                Contact Us
+                            </h2>
+                            <p class="contacts__text">
+                                Feel free to contact us with questions, potencial partnerships or media inquiries
+                            </p>
+                            <form class="form" action="#">
+                                <input class="form__input" type="text" placeholder="First Name">
+                                <input class="form__input" type="text" placeholder="Last Name">
+                                <input class="form__input form__input_email" type="email" placeholder="E-mail">
+                                <textarea class="form__textarea" placeholder="Your text"></textarea>
+                                <button class="form__btn" type="submit">Send Message</button>
+                            </form>
+                        </div>
+                    </section>
+                </div>
+                
             </div>
         </main>
 
