--- a/pricing.html
+++ b/pricing.html
@@ -66,7 +66,7 @@
                             <h2 class="pr_btn_ttl">Standard</h2>
                         </div>
                         <p class="pr_btn_price" id="standardPrice">$250</p>
-                        <p class="pr_btn_txt">per month</p>
+                        <p class="pr_btn_txt" id="standardlength">per month</p>
                         <ul class="pr_btn_features">
                             <li>Unlimited generation of email, SMS, social media, and press content.</li>
                             <li>Task tracking and collaboration tools to get you from ideation to approval.</li>
@@ -78,7 +78,7 @@
                             <h2 class="pr_btn_ttl">Agency</h2>
                         </div>
                         <p class="pr_btn_price" id="agencyPrice">$1000</p>
-                        <p class="pr_btn_txt">per month</p>
+                        <p class="pr_btn_txt" id="agencylength">per month</p>
                         <ul class="pr_btn_features">
                             <li>All of the Standard plan designed to be used in an agency setting.</li>
                             <li>Unlimited workspaces and unrestricted generation.</li>
