--- a/blog.html
+++ b/blog.html
@@ -48,11 +48,88 @@
         </header>
         
         <main class="main blog">
-            <section class="choose">
-                <div class="container">
-                    <h2 class="section-title">
-                        Blog
+            <section class="blog_holder">
+                <div class="ttl_holder_blog">
+                    <h2 class="blog_mod_ttl">
+                        Modernizing Democracy
                     </h2>
+                    <h4 class="blog_mod_txt">
+                        A Copy-Writer for the 21st Century.
+                    </h4>
+                </div>
+                <div class="blog_wrapper">
+                    <div class="blog_wrapper_2">
+                        <h2 class="blog_title">
+                            Blog
+                        </h2>
+                        <div class="art_holder">
+                            <div class="art_card">
+                                <img class="art_img" src="images/a1.jpg" alt="">
+                                <p class="art_date">
+                                    December 16, 2024
+                                </p>
+                                <a class="art_ref" href="#">
+                                    Major Update: Persona Overhaul
+                                </a>
+                                <p class="art_txt">
+                                    Achieve a much more realistic,...
+                                </p>
+                            </div>
+                            <!-- ////////////////// -->
+                            <div class="art_card">
+                                <img class="art_img" src="images/a1.jpg" alt="">
+                                <p class="art_date">
+                                    December 16, 2024
+                                </p>
+                                <a class="art_ref" href="#">
+                                    Major Update: Persona Overhaul
+                                </a>
+                                <p class="art_txt">
+                                    Achieve a much more realistic,...
+                                </p>
+                            </div>
+                            <!-- ////////////////// -->
+                            <div class="art_card">
+                                <img class="art_img" src="images/a1.jpg" alt="">
+                                <p class="art_date">
+                                    December 16, 2024
+                                </p>
+                                <a class="art_ref" href="#">
+                                    Major Update: Persona Overhaul
+                                </a>
+                                <p class="art_txt">
+                                    Achieve a much more realistic,...
+                                </p>
+                            </div>
+                            <!-- ////////////////// -->
+                            <div class="art_card">
+                                <img class="art_img" src="images/a1.jpg" alt="">
+                                <p class="art_date">
+                                    December 16, 2024
+                                </p>
+                                <a class="art_ref" href="#">
+                                    Major Update: Persona Overhaul
+                                </a>
+                                <p class="art_txt">
+                                    Achieve a much more realistic,...
+                                </p>
+                            </div>
+                            <!-- ////////////////// -->
+                             <div class="art_card">
+                                <img class="art_img" src="images/a1.jpg" alt="">
+                                <p class="art_date">
+                                    December 16, 2024
+                                </p>
+                                <a class="art_ref" href="#">
+                                    Major Update: Persona Overhaul
+                                </a>
+                                <p class="art_txt">
+                                    Achieve a much more realistic,...
+                                </p>
+                            </div>
+                            <!-- ////////////////// -->
+                        </div>
+                    </div>
                 </div>
             </section>
         </main>
