--- a/contacts.html
+++ b/contacts.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="wrapper cont">
+    <div class="wrapper">
         <header class="header header-main">
             <div class="container">
                 <div class="header__inner">
