--- a/about.html
+++ b/about.html
@@ -12,8 +12,8 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
-    <div class="wrapper about">
-        <header class="header header-main">
+    <div class="wrapper">
+        <header class="header-main">
             <div class="container">
                 <div class="header__inner">
                     <div class="header__part one">
