--- a/blog.html
+++ b/blog.html
@@ -128,6 +128,32 @@
                                 </p>
                             </div>
                             <!-- ////////////////// -->
+                            <div class="art_card">
+                                <img class="art_img" src="images/a1.jpg" alt="">
+                                <p class="art_date">
+                                    December 16, 2024
+                                </p>
+                                <a class="art_ref" href="#">
+                                    Major Update: Persona Overhaul
+                                </a>
+                                <p class="art_txt">
+                                    Achieve a much more realistic,...
+                                </p>
+                            </div>
+                            <!-- ////////////////// -->
+                            <div class="art_card">
+                                <img class="art_img" src="images/a1.jpg" alt="">
+                                <p class="art_date">
+                                    December 16, 2024
+                                </p>
+                                <a class="art_ref" href="#">
+                                    Major Update: Persona Overhaul
+                                </a>
+                                <p class="art_txt">
+                                    Achieve a much more realistic,...
+                                </p>
+                            </div>
+                            <!-- ////////////////// -->
                         </div>
                     </div>
                 </div>
