--- a/blog.html
+++ b/blog.html
@@ -77,80 +77,120 @@
                             </div>
                             <!-- ////////////////// -->
                             <div class="art_card">
-                                <img class="art_img" src="images/a1.jpg" alt="">
+                                <img class="art_img" src="images/a2.jpg" alt="">
                                 <p class="art_date">
-                                    December 16, 2024
+                                    November 18, 2024
                                 </p>
                                 <a class="art_ref" href="#">
-                                    Major Update: Persona Overhaul
+                                    Major Update: Collaborate as a Team
                                 </a>
                                 <p class="art_txt">
-                                    Achieve a much more realistic,...
+                                    An overhaul and major rework o...
                                 </p>
                             </div>
                             <!-- ////////////////// -->
                             <div class="art_card">
-                                <img class="art_img" src="images/a1.jpg" alt="">
+                                <img class="art_img" src="images/a3.jpg" alt="">
                                 <p class="art_date">
-                                    December 16, 2024
+                                    October 8, 2024
                                 </p>
                                 <a class="art_ref" href="#">
-                                    Major Update: Persona Overhaul
+                                    Content Update: Improved Emails
                                 </a>
                                 <p class="art_txt">
-                                    Achieve a much more realistic,...
+                                    Generate more convincing fundr...
                                 </p>
                             </div>
                             <!-- ////////////////// -->
                             <div class="art_card">
-                                <img class="art_img" src="images/a1.jpg" alt="">
+                                <img class="art_img" src="images/a4.jpg" alt="">
                                 <p class="art_date">
-                                    December 16, 2024
+                                    September 24, 2024
                                 </p>
                                 <a class="art_ref" href="#">
-                                    Major Update: Persona Overhaul
+                                    Major Overhaul: Onboarding and Setup
                                 </a>
                                 <p class="art_txt">
-                                    Achieve a much more realistic,...
+                                    An update to account setup to ...
                                 </p>
                             </div>
                             <!-- ////////////////// -->
                              <div class="art_card">
-                                <img class="art_img" src="images/a1.jpg" alt="">
+                                <img class="art_img" src="images/a5.jpg" alt="">
                                 <p class="art_date">
-                                    December 16, 2024
+                                    September 9, 2024
                                 </p>
                                 <a class="art_ref" href="#">
-                                    Major Update: Persona Overhaul
+                                    Make Your Mark on Social Media!
                                 </a>
                                 <p class="art_txt">
-                                    Achieve a much more realistic,...
+                                    Bring your campaign to the dig...
                                 </p>
                             </div>
                             <!-- ////////////////// -->
                             <div class="art_card">
-                                <img class="art_img" src="images/a1.jpg" alt="">
+                                <img class="art_img" src="images/a6.jpg" alt="">
                                 <p class="art_date">
-                                    December 16, 2024
+                                    August 19, 2024
                                 </p>
                                 <a class="art_ref" href="#">
-                                    Major Update: Persona Overhaul
+                                    Fresh off the Presses
                                 </a>
                                 <p class="art_txt">
-                                    Achieve a much more realistic,...
+                                    Generate Press Releases, Newsl...
                                 </p>
                             </div>
                             <!-- ////////////////// -->
                             <div class="art_card">
-                                <img class="art_img" src="images/a1.jpg" alt="">
+                                <img class="art_img" src="images/a7.jpg" alt="">
                                 <p class="art_date">
-                                    December 16, 2024
+                                    August 12, 2024
                                 </p>
                                 <a class="art_ref" href="#">
-                                    Major Update: Persona Overhaul
+                                    Introducing Personas
                                 </a>
                                 <p class="art_txt">
-                                    Achieve a much more realistic,...
+                                    Content Customization on a Who...
+                                </p>
+                            </div>
+                            <!-- ////////////////// -->
+                            <div class="art_card">
+                                <img class="art_img" src="images/a8.jpg" alt="">
+                                <p class="art_date">
+                                    July 30, 2024
+                                </p>
+                                <a class="art_ref" href="#">
+                                    Major Update: SMS Texts
+                                </a>
+                                <p class="art_txt">
+                                    Generative SMS Text Options Ad...
+                                </p>
+                            </div>
+                            <!-- ////////////////// -->
+                            <div class="art_card">
+                                <img class="art_img" src="images/a9.jpg" alt="">
+                                <p class="art_date">
+                                    July 26, 2024
+                                </p>
+                                <a class="art_ref" href="#">
+                                    An Intro to using AI in Politics
+                                </a>
+                                <p class="art_txt">
+                                    Knowing Me, Knowing You
+                                </p>
+                            </div>
+                            <!-- ////////////////// -->
+                             <!-- ////////////////// -->
+                            <div class="art_card">
+                                <img class="art_img" src="images/a7.jpg" alt="">
+                                <p class="art_date">
+                                    July 8, 2024
+                                </p>
+                                <a class="art_ref" href="#">
+                                    Red Letter AI Launches
+                                </a>
+                                <p class="art_txt">
+                                    Never Get Stuck on an Empty E...
                                 </p>
                             </div>
                             <!-- ////////////////// -->
