--- a/Login/login.html
+++ b/Login/login.html
@@ -38,6 +38,7 @@
             </div>
         </form>
         <button class="btn" id="home_btn">Home Page</button>
+        <button class="btn tmp" id="goto_camp_btn">GOTO Campaign</button>
     </div>
     <script src="script.js"></script>
 </body>
